fixed spacing in footer

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -771,6 +771,7 @@ footer {
 		background-color: black;
 		padding-top: 0.5em;
 		margin-top: 0.5em;
+		color: @lightest-grey;
 	}
 
 	.left {
